--- a/src/components/layout/Sidebar.css
+++ b/src/components/layout/Sidebar.css
@@ -43,6 +43,12 @@
   line-height: normal;
 }
 
+.sidebar .sidebar-logo-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
 .sidebar .sidebar-menu {
   display: flex;
   flex-direction: column;
